[package]
name = "builder_cpp"
version = "0.7.1"
edition = "2021"
description = "A simple build tool for building C and C++ applications"
license = "MIT"
homepage = "https://github.com/Dr-42/builder_cpp"
repository = "https://github.com/Dr-42/builder_cpp"
keywords = ["build", "build-tool", "C++", "toml", "C"]

[dependencies]
toml = "0.7.2"
colored = "2.0.0"
itertools = "0.10.5"
sha1 = "0.10.5"
rayon = "1.7.0"
indicatif = "0.17.3"
clap = { version = "4.4.6", features = ["derive"] }
directories = "5.0.1"
serde = { version = "1.0.190", features = ["derive"] }
